Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17309

A qmake called by QtCreator can not treat well the project file with japanese and LF

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 4.3.0-beta1
    • Qt Creator 4.1.0
    • Windows10 Pro, Build 1607
      QtCreator 4.1.0
      Qt 5.7.0 MinGW 32bit Desktop (official binary)
    • 15148d8e4454ff3277131ea52a4204c5fa0b7ab0

    Description

      I'm using QtCreator with Japanese comment.
      When I use the project file with Japanese and LF, a qmake result in QtCreator output wrong and duplicated result.
      A variable in next of Japanese comment is ignored.
      In command prompt (Cmd.exe), it is not happened.

      • my project file
      BugTest.pro
      
HOGE = hoge
      
message("HOGE is "$$HOGE)
      

# Bad example, after japanese comment あ
      
FUGA = fuga
      
message("FUGA is "$$FUGA)

      
      • result in Qt Creator
      Project MESSAGE: HOGE is hoge
      Project MESSAGE: FUGA is 
      Project MESSAGE: HOGE is hoge
      Project MESSAGE: FUGA is 
      
      • result in Cmd.exe
      c:\{MYPATH}\BugTest>c:\Qt\5.7\mingw53_32\bin\qmake
      Project MESSAGE: HOGE is hoge
      Project MESSAGE: FUGA is fuga
      Project MESSAGE: HOGE is hoge
      Project MESSAGE: FUGA is fuga
      Project MESSAGE: HOGE is hoge
      Project MESSAGE: FUGA is fuga
      
      c:\{MYPATH}\BugTest>
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-17309
          # Subject Branch Project Status CR V

          Activity

            People

              portale Alessandro Portale
              yonta Keita SAITOU
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes