src/shared/proparser/qmakevfs.h
@@ -36,6 +36,10 @@
 # endif
 #endif
 
+#ifndef QT_NO_TEXTCODEC
+QT_FORWARD_DECLARE_CLASS(QTextCodec)
+#endif
+
 #ifdef PROEVALUATOR_DUAL_VFS
 # ifndef PROEVALUATOR_CUMULATIVE
 #  error PROEVALUATOR_DUAL_VFS requires PROEVALUATOR_CUMULATIVE
@@ -79,6 +83,10 @@ public:
     void invalidateContents();
 #endif
 
+#ifndef QT_NO_TEXTCODEC
+    void setTextCodec(const QTextCodec *textCodec);
+#endif
+
 private:
 #ifndef PROEVALUATOR_FULL
 # ifdef PROEVALUATOR_THREAD_SAFE
@@ -87,6 +95,9 @@ private:
     QHash<QString, QString> m_files;
     QString m_magicMissing;
     QString m_magicExisting;
+#endif
+#ifndef QT_NO_TEXTCODEC
+    const QTextCodec *m_textCodec;
 #endif
 };
 
